# SYDE-532-project

./: .gitignore  README.md  UPSTREAM.cff  VERIFICATION_PLAN.md  analysis.py  desertification-toy.nlogo  main.py  plot_panels.py  pyproject.toml  run.py  run_all_cases.sh  run_experiment.py  run_india_pakistan.sh  run_paper.py  run_paper_protocol.py  run_paper_protocol_generic.py  run_pv.py  verify_protocol.py
experiments/: validate_australia.xml
groundwater-commons/: codemeta.json
groundwater-commons/code/: Groundwater_Commons_Game.nlogo
model/: Groundwater_Commons_Game.nlogo
model/upstream/: Groundwater_Commons_Game.nlogo
