[project]
name = "gcg-extended"
version = "0.1.0"
description = "Python runners and analysis for the Groundwater Commons Game (Castilla-Rho et al. 2017) with Canada and agrivoltaic extensions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynetlogo==0.5.2",
    "jpype1",
    "pandas",
    "matplotlib",
    "numpy",
]
